Remove unused scripts

--- a/package.json
+++ b/package.json
@@ -17,32 +17,22 @@
     "clean:node_modules": "rm -rf node_modules",
     "clean:node_modules_native": "(cd ./native && rm -rf node_modules)",
     "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules && npm run clean:node_modules_native",
-    "lint:scss": "stylelint 'packages/**/*.scss' --syntax scss",
     "lint:js": "eslint . .storybook --ext .js,.jsx",
     "lint:js:fix": "eslint . .storybook --ext .js,.jsx --fix",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run lint:js",
     "jest:native:update": "./subshell ./native jest --updateSnapshot",
     "jest:native:watch": "(cd ./native && jest --watch)",
-    "jest:update": "jest --updateSnapshot",
-    "jest:watch": "jest --watch",
-    "jest": "TZ=Europe/London jest --coverage",
     "flow": "flow",
     "flow-typed": "flow-typed",
     "build:tokens": "lerna run tokens --scope bpk-tokens",
     "build:svgs": "lerna run svgs --scope bpk-svgs",
     "build": "(cd ./native && npm run link)",
-    "storybook:dist": "build-storybook -c .storybook -o dist/storybook",
     "storybook": "start-storybook -p 9001",
-    "sassdoc": "sassdoc {packages/bpk-mixins/src/**/*,packages/bpk-svgs/dist/*,packages/bpk-tokens/tokens/base.default}.scss -d dist/sassdoc -v --strict",
-    "docs": "npm run submodules:pull && BPK_BUILT_AT=$( date -u +%s ) webpack-dev-server --open",
-    "docs:dist": "npm run submodules:pull && npm run clean:dist && NODE_ENV=production BPK_BUILT_AT=$( date -u +%s ) webpack --progress --display=minimal --bail && npm run sassdoc",
     "start": "npm run build && npm run storybook",
     "native": "./subshell ./native npm run storybook",
-    "generate-changelogs": "node scripts/release-process/generate-changelogs.js",
-    "upcoming-changes": "node scripts/release-process/upcoming-changes.js",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
-    "test": "npm run lint && npm run check-bpk-dependencies && npm run jest && npm run test:native && npm run flow",
+    "test": "npm run lint && npm run check-bpk-dependencies && npm run test:native && npm run flow",
     "test:native": "./subshell ./native npm test -- --forceExit",
     "ios": "(cd ./native && npm run ios)",
     "android": "(cd ./native && npm run android)",
@@ -66,9 +56,6 @@
     "*.js": [
       "eslint --fix",
       "git add"
-    ],
-    "*.scss": [
-      "stylelint --syntax scss"
     ]
   },
   "repository": {
@@ -148,8 +135,6 @@
     "semver": "^5.6.0",
     "static-site-generator-webpack-plugin": "github:skyscanner/static-site-generator-webpack-plugin#7bac616",
     "style-loader": "^0.22.1",
-    "stylelint": "^9.8.0",
-    "stylelint-config-skyscanner": "^2.0.0-beta.2",
     "theo": "^8.0.0-beta.2",
     "tinycolor2": "^1.4.1",
     "webpack": "^3.10.0",
