Remove storybook references

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "clean:node_modules": "rm -rf node_modules",
     "clean:node_modules_native": "(cd ./native && rm -rf node_modules)",
     "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules && npm run clean:node_modules_native",
-    "lint:js": "eslint . .storybook --ext .js,.jsx",
-    "lint:js:fix": "eslint . .storybook --ext .js,.jsx --fix",
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:js:fix": "eslint . --ext .js,.jsx --fix",
     "lint": "npm run lint:js",
     "jest:native:update": "./subshell ./native jest --updateSnapshot",
     "jest:native:watch": "(cd ./native && jest --watch)",
