--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,6 @@
 {
   "presets": [
-    "es2015",
-    "react"
+    "es2015"
   ],
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-class-properties"
-  ]
+  "plugins": []
 }
