--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
     "jest:native:watch": "(cd ./native && jest --watch)",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "build:tokens": "lerna run tokens --scope bpk-tokens",
-    "build:svgs": "lerna run svgs --scope bpk-svgs",
     "build": "(cd ./native && npm run link)",
-    "storybook": "start-storybook -p 9001",
-    "start": "npm run build && npm run storybook",
     "native": "./subshell ./native npm run storybook",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
@@ -56,133 +52,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Skyscanner/backpack.git"
+    "url": "git@github.com:Skyscanner/backpack-react-native.git"
   },
   "author": "Backpack Design System <backpack@skyscanner.net>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-knobs": "^3.4.11",
     "@storybook/addon-links": "^3.4.11",
-    "@storybook/react": "^3.4.11",
-    "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "chalk": "^2.4.1",
     "colors": "^1.3.2",
-    "copy-webpack-plugin": "^4.5.3",
-    "core-js": "^2.5.7",
-    "css-loader": "^1.0.0",
     "danger": "^3.8.6",
-    "del": "^3.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
     "eslint-config-skyscanner-with-prettier": "^0.4.0",
     "eslint-plugin-flowtype": "^3.0.0",
     "eslint_d": "^7.1.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
     "flow-bin": "^0.88.0",
     "flow-typed": "^2.5.1",
     "globby": "^8.0.1",
-    "gulp": "^3.9.1",
-    "gulp-chmod": "^2.0.0",
-    "gulp-cli": "^2.0.0",
-    "gulp-clone": "^2.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-iconfont": "^9.2.0",
-    "gulp-jsonlint": "^1.2.2",
-    "gulp-merge": "^0.1.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-theo": "^2.0.0",
     "husky": "^1.2.0",
     "jest": "^21.2.1",
-    "js-yaml": "^3.12.0",
-    "json-loader": "^0.5.4",
     "lerna": "^3.6.0",
     "lint-staged": "^8.0.5",
     "lodash": "^4.17.11",
-    "marked": "^0.5.2",
-    "merge-stream": "^1.0.1",
-    "node-sass": "^4.10.0",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
     "prompt": "^1.0.0",
-    "prop-types": "^15.5.10",
-    "punycode": "^2.1.1",
-    "raf": "^3.4.1",
-    "raw-loader": "^0.5.1",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.3.1",
-    "react-svg-loader": "^2.1.0",
-    "react-test-renderer": "16.4.2",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^7.1.0",
-    "sassdoc": "^2.5.1",
-    "semver": "^5.6.0",
-    "static-site-generator-webpack-plugin": "github:skyscanner/static-site-generator-webpack-plugin#7bac616",
-    "style-loader": "^0.22.1",
-    "theo": "^8.0.0-beta.2",
-    "tinycolor2": "^1.4.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0",
-    "wrapper-webpack-plugin": "^1.0.0",
-    "zip-it-loader": "^0.3.0"
-  },
-  "jest": {
-    "verbose": true,
-    "setupFiles": [
-      "<rootDir>/scripts/jest/setup.js"
-    ],
-    "testRegex": "packages/.*-test\\.js$",
-    "testPathIgnorePatterns": [
-      "native/"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!bpk)"
-    ],
-    "moduleNameMapper": {
-      "react-transition-group/CSSTransition": "<rootDir>/scripts/stubs/cssTransitionStub.js",
-      "^.+\\.scss$": "<rootDir>/scripts/stubs/styleStub.js",
-      "^.+\\.svg$": "<rootDir>/scripts/stubs/fileStub.js"
-    },
-    "coverageThreshold": {
-      "global": {
-        "statements": 75,
-        "branches": 70,
-        "functions": 75,
-        "lines": 75
-      }
-    }
-  },
-  "greenkeeper": {
-    "ignore": [
-      "babel-loader",
-      "css-loader",
-      "extract-text-webpack-plugin",
-      "file-loader",
-      "json-loader",
-      "postcss-loader",
-      "raw-loader",
-      "react",
-      "react-dom",
-      "react-native",
-      "react-test-renderer",
-      "sass-loader",
-      "style-loader",
-      "webpack",
-      "webpack-dev-server",
-      "wrapper-webpack-plugin",
-      "zip-it-loader"
-    ]
+    "prop-types": "^15.5.10"
   }
 }
