Fix broken build script

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "jest:native:watch": "(cd ./native && jest --watch)",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "build": "(cd ./native && npm run link)",
     "native": "./subshell ./native npm run storybook",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
@@ -36,12 +35,12 @@
     "danger": "danger ci",
     "prettier": "prettier --config .prettierrc --write \"**/*.js\"",
     "create-component": "node scripts/npm/create-component.js",
-    "link": "react-native link",
+    "build": "react-native link",
     "start": "react-native start",
-    "ios": "(cd native && react-native run-ios --simulator=\"iPhone 8\")",
+    "ios": "react-native run-ios --simulator=\"iPhone 8\"",
     "android:emulator": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd",
     "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
-    "android:build": "(cd native && react-native run-android)",
+    "android:build": "react-native run-android",
     "android": "npm run android:emulator & npm run android:build",
     "storybook": "(cd native && storybook start -p 7007 --root ../)"
   },
