--- a/package.json
+++ b/package.json
@@ -8,23 +8,20 @@
   },
   "scripts": {
     "preinstall": "npx ensure-node-env",
-    "postinstall:native": "(cd ./native && npm install)",
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap --no-ci",
     "lerna": "lerna",
     "clean:dist": "rm -rf dist",
     "clean:lerna": "lerna clean --yes",
     "clean:node_modules": "rm -rf node_modules",
-    "clean:node_modules_native": "(cd ./native && rm -rf node_modules)",
-    "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules && npm run clean:node_modules_native",
+    "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules",
     "lint:js": "eslint . --ext .js,.jsx",
     "lint:js:fix": "eslint . --ext .js,.jsx --fix",
     "lint": "npm run lint:js",
-    "jest:native:update": "./subshell ./native jest --updateSnapshot",
-    "jest:native:watch": "(cd ./native && jest --watch)",
+    "jest:native:update": "jest --updateSnapshot",
+    "jest:native:watch": "jest --watch)",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "native": "./subshell ./native npm run storybook",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
     "test": "npm run lint && npm run check-bpk-dependencies && jest --coverage && npm run flow",
