--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,58 @@
 .DS_Store
-.idea
 .vscode
-.sass-cache
-/dist
-/coverage
-/packages/bpk-component-icon/*/
-!/packages/bpk-component-icon/src
-node_modules
-npm-debug.*
 lerna-debug.log
-sassdoc-data.json
-backpack.iml
-yarn.lock
-/packages/*/changelog.md
-native/android/captures
-*.xcworkspace
+/android/captures
 native/ios/Pods
-native/android/backpack.keystore
+
+build/
+
+# Xcode
+#
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Android/IntelliJ
+#
+.idea
+.gradle
+local.properties
+*.iml
+/.idea/caches/build_file_checksums.ser
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+gradlew.bat
+
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn.lock
+
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+
+#Jest
+coverage
+
