Move native to root (v2) (#5)
* Merge package.jsons (+5 squashed commits)
Squashed commits:
[87bc1d8d8] Temporarily remove danger check
[08065e49a] Remove babelrc
[297cbee7d] Remove babel plugins
[f5c8162fa] Remove more unused deps
[7268a3970] Remove unused deps

* Fix broken build script

* Fix broken cross dep script

* Move babelrc and fix some scripts

* Fix broken dangerfile

* Fix broken snapshots

--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -73,7 +73,7 @@ import com.android.build.OutputFile
  * ]
  */
 
-apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../../node_modules/react-native/react.gradle"
 apply plugin: 'kotlin-android-extensions'
 
 /**
