--- a/package.json
+++ b/package.json
@@ -8,36 +8,59 @@
   },
   "scripts": {
     "preinstall": "npx ensure-node-env",
-    "postinstall:native": "(cd ./native && npm install)",
-    "postinstall": "npm run postinstall:native && npm run bootstrap",
+    "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap --no-ci",
     "lerna": "lerna",
     "clean:dist": "rm -rf dist",
     "clean:lerna": "lerna clean --yes",
     "clean:node_modules": "rm -rf node_modules",
-    "clean:node_modules_native": "(cd ./native && rm -rf node_modules)",
-    "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules && npm run clean:node_modules_native",
+    "clean": "npm run clean:dist && npm run clean:lerna && npm run clean:node_modules",
     "lint:js": "eslint . --ext .js,.jsx",
     "lint:js:fix": "eslint . --ext .js,.jsx --fix",
     "lint": "npm run lint:js",
-    "jest:native:update": "./subshell ./native jest --updateSnapshot",
-    "jest:native:watch": "(cd ./native && jest --watch)",
+    "jest:native:update": "jest --updateSnapshot",
+    "jest:native:watch": "jest --watch",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "build": "(cd ./native && npm run link)",
-    "native": "./subshell ./native npm run storybook",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
-    "test": "npm run lint && npm run check-bpk-dependencies && npm run test:native && npm run flow",
+    "test": "npm run lint && npm run check-bpk-dependencies && jest --coverage && npm run flow",
     "test:native": "./subshell ./native npm test -- --forceExit",
-    "ios": "(cd ./native && npm run ios)",
-    "android": "(cd ./native && npm run android)",
     "check-owners": "npm whoami && ( node scripts/npm/get-owners.js | grep -E $(npm whoami) ) && node scripts/npm/check-owners.js",
     "publish": "npm run check-owners && npm run build && git pull --rebase && npm run flow stop && npm run test && lerna publish",
     "release": "npm run publish",
     "danger": "danger ci",
     "prettier": "prettier --config .prettierrc --write \"**/*.js\"",
-    "create-component": "node scripts/npm/create-component.js"
+    "create-component": "node scripts/npm/create-component.js",
+    "build": "react-native link",
+    "start": "react-native start",
+    "ios": "react-native run-ios --simulator=\"iPhone 8\"",
+    "android:emulator": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd",
+    "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
+    "android:build": "react-native run-android",
+    "android": "npm run android:emulator & npm run android:build",
+    "storybook": "(cd native && storybook start -p 7007 --root ../)"
+  },
+  "rnpm": {
+    "assets": [
+      "bpk-svgs/dist/font/"
+    ]
+  },
+  "jest": {
+    "preset": "react-native",
+    "verbose": true,
+    "testRegex": ".*-test(\\.ios)?(\\.android)?\\.js$",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|bpk|@skyscanner|lodash-es)"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 75,
+        "branches": 70,
+        "functions": 75,
+        "lines": 75
+      }
+    }
   },
   "husky": {
     "hooks": {
@@ -74,6 +97,15 @@
     "lint-staged": "^8.0.5",
     "lodash": "^4.17.11",
     "prompt": "^1.0.0",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "@storybook/react-native": "^3.3.10",
+    "babel-preset-react-native": "^4.0.0",
+    "bpk-svgs": "^6.0.6",
+    "bpk-tokens": "^27.4.1",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-native": "0.55.3",
+    "react-native-linear-gradient": "react-native-community/react-native-linear-gradient#20928ce2ac8038e8545c7f6c3faab05f866deabd",
+    "react-test-renderer": "16.3.1"
   }
 }
