--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
     "clean:lerna": "lerna clean --yes",
     "clean:node_modules": "rm -rf node_modules",
     "clean": "npm run clean:lerna && npm run clean:node_modules",
-    "lint:js": "eslint . --ext .js,.jsx",
-    "lint:js:fix": "eslint . --ext .js,.jsx --fix",
-    "lint": "npm run lint:js",
-    "jest:native:update": "jest --updateSnapshot",
-    "jest:native:watch": "jest --watch",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "lint": "eslint . --ext .js,.jsx",
+    "jest:update": "jest --updateSnapshot",
+    "jest:watch": "jest --watch",
     "flow": "flow",
     "flow-typed": "flow-typed",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
     "test": "npm run lint && npm run check-bpk-dependencies && jest --coverage && npm run flow",
     "check-owners": "npm whoami && ( node scripts/npm/get-owners.js | grep -E $(npm whoami) ) && node scripts/npm/check-owners.js",
-    "publish": "npm run check-owners && npm run build && git pull --rebase && npm run flow stop && npm run test && lerna publish",
+    "publish": "npm run check-owners && git pull --rebase && npm run flow stop && npm test && lerna publish",
     "release": "npm run publish",
     "danger": "danger ci",
     "prettier": "prettier --config .prettierrc --write \"**/*.js\"",
