clean up some stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ install:
 script:
   - set -e
   - ./scripts/check-pristine-state package-lock.json ios/native.xcodeproj/project.pbxproj ios/native/Info.plist
-  - #npm run danger
+  - npm run danger
   - npm test
 
-#cache:
-  #directories:
-    #- node_modules
+cache:
+  directories:
+    - node_modules
 
 branches:
   only:
