--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "preinstall": "npx ensure-node-env",
-    "postinstall": "npm run bootstrap && npm run link && npm run install:cocoapods",
+    "postinstall": "npm run bootstrap && npm run link",
     "install:cocoapods": "(cd ios && bundle install && bundle exec pod install)",
     "bootstrap": "lerna bootstrap --no-ci",
     "lerna": "lerna",
@@ -31,7 +31,7 @@
     "prettier": "prettier --config .prettierrc --write \"**/*.js\"",
     "create-component": "node scripts/npm/create-component.js",
     "link": "react-native link",
-    "ios": "react-native run-ios --simulator=\"iPhone 8\"",
+    "ios": "npm run install:cocoapods && react-native run-ios --simulator=\"iPhone 8\"",
     "android:emulator": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd",
     "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
     "android:build": "react-native run-android",
