--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "backpack",
-  "version": "0.0.1",
   "private": true,
+  "name": "backpack-react-native",
+  "version": "0.0.1",
   "engines": {
     "node": "^8.12.0",
     "npm": "^6.4.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Skyscanner/backpack-react-native.git"
+  },
+  "author": "Backpack Design System <backpack@skyscanner.net>",
+  "license": "Apache-2.0",
   "scripts": {
     "preinstall": "npx ensure-node-env",
     "postinstall": "npm run bootstrap && npm run link",
@@ -36,12 +42,7 @@
     "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
     "android:build": "react-native run-android",
     "android": "npm run android:emulator & npm run android:build",
-    "start": "storybook start -p 7007 --root ."
-  },
-  "rnpm": {
-    "assets": [
-      "bpk-svgs/dist/font/"
-    ]
+    "start": "react-native start & storybook start"
   },
   "jest": {
     "preset": "react-native",
@@ -59,6 +60,11 @@
       }
     }
   },
+  "rnpm": {
+    "assets": [
+      "bpk-svgs/dist/font/"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -70,39 +76,33 @@
       "git add"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Skyscanner/backpack-react-native.git"
-  },
-  "author": "Backpack Design System <backpack@skyscanner.net>",
-  "license": "Apache-2.0",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-links": "^3.4.11",
-    "babel-jest": "^23.4.2",
-    "colors": "^1.3.2",
-    "danger": "^3.8.6",
-    "eslint-config-skyscanner-with-prettier": "^0.4.0",
-    "eslint-plugin-flowtype": "^3.0.0",
-    "eslint_d": "^7.1.1",
-    "flow-bin": "^0.88.0",
-    "flow-typed": "^2.5.1",
-    "globby": "^8.0.1",
-    "husky": "^1.2.0",
-    "jest": "^21.2.1",
-    "lerna": "^3.6.0",
-    "lint-staged": "^8.0.5",
-    "lodash": "^4.17.11",
-    "prompt": "^1.0.0",
-    "prop-types": "^15.5.10",
-    "@storybook/react-native": "^3.3.10",
-    "babel-preset-react-native": "^4.0.0",
+    "@storybook/addon-actions": "^4.1.1",
+    "@storybook/addon-links": "^4.1.1",
+    "@storybook/react-native": "^4.1.1",
+    "babel-jest": "^23.6.0",
     "bpk-svgs": "^6.0.6",
     "bpk-tokens": "^27.4.1",
-    "react": "16.3.1",
-    "react-dom": "16.3.1",
-    "react-native": "0.55.3",
+    "colors": "^1.3.3",
+    "danger": "^6.1.12",
+    "eslint-config-skyscanner-with-prettier": "^0.4.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint_d": "^7.2.0",
+    "flow-bin": "^0.89.0",
+    "flow-typed": "^2.5.1",
+    "globby": "^8.0.1",
+    "husky": "^1.2.1",
+    "jest": "^23.6.0",
+    "lerna": "^3.6.0",
+    "lint-staged": "^8.1.0",
+    "lodash": "^4.17.11",
+    "metro-react-native-babel-preset": "^0.48.5",
+    "prompt": "^1.0.0",
+    "prop-types": "^15.5.10",
+    "react": "16.6.1",
+    "react-dom": "16.6.1",
+    "react-native": "0.57.7",
     "react-native-linear-gradient": "react-native-community/react-native-linear-gradient#20928ce2ac8038e8545c7f6c3faab05f866deabd",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.6.1"
   }
 }
