--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
     "android:build": "react-native run-android",
     "android": "npm run android:emulator & npm run android:build",
-    "start": "storybook start -p 7007 --root ."
+    "start": "storybook start -p 7007 --skip-packager & react-native start --projectRoot storybook"
   },
   "rnpm": {
     "assets": [
@@ -79,7 +79,10 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.11",
     "@storybook/addon-links": "^3.4.11",
+    "@storybook/react-native": "^3.3.10",
     "babel-jest": "^23.4.2",
+    "bpk-svgs": "^6.0.6",
+    "bpk-tokens": "^27.4.1",
     "colors": "^1.3.2",
     "danger": "^3.8.6",
     "eslint-config-skyscanner-with-prettier": "^0.4.0",
@@ -95,14 +98,10 @@
     "lodash": "^4.17.11",
     "prompt": "^1.0.0",
     "prop-types": "^15.5.10",
-    "@storybook/react-native": "^3.3.10",
-    "babel-preset-react-native": "^4.0.0",
-    "bpk-svgs": "^6.0.6",
-    "bpk-tokens": "^27.4.1",
-    "react": "16.3.1",
-    "react-dom": "16.3.1",
-    "react-native": "0.55.3",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-native": "^0.57.7",
     "react-native-linear-gradient": "react-native-community/react-native-linear-gradient#20928ce2ac8038e8545c7f6c3faab05f866deabd",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "^16.6.1"
   }
 }
