[BPK-1754] Upgrade React Native

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "android:emulator:min": "$ANDROID_SDK_ROOT/emulator/emulator -avd bpk-avd-min",
     "android:build": "react-native run-android",
     "android": "npm run android:emulator & npm run android:build",
-    "start": "react-native start & storybook start"
+    "start": "react-native start"
   },
   "jest": {
     "preset": "react-native",
