--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!react-native|bpk|@skyscanner|lodash-es)"
     ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
     "coverageThreshold": {
       "global": {
         "statements": 75,
@@ -81,6 +84,7 @@
     "@storybook/addon-links": "^4.1.1",
     "@storybook/react-native": "^4.1.1",
     "babel-jest": "^23.6.0",
+    "babel-plugin-jest-hoist": "^23.2.0",
     "bpk-svgs": "^6.0.6",
     "bpk-tokens": "^27.4.1",
     "colors": "^1.3.3",
@@ -96,7 +100,7 @@
     "lerna": "^3.6.0",
     "lint-staged": "^8.1.0",
     "lodash": "^4.17.11",
-    "metro-react-native-babel-preset": "^0.48.5",
+    "metro-react-native-babel-preset": "^0.51.0",
     "prompt": "^1.0.0",
     "prop-types": "^15.5.10",
     "react": "16.6.1",
