--- a/packages/react-native-bpk-component-icon/fonts.gradle
+++ b/packages/react-native-bpk-component-icon/fonts.gradle
@@ -4,7 +4,7 @@
 
 def config = project.hasProperty("bpkicon") ? project.bpkicon : [];
 
-def iconFontsDir = config.iconFontsDir ?: "./node_modules/bpk-svgs/dist/font";
+def iconFontsDir = config.iconFontsDir ?: "../../node_modules/bpk-svgs/dist/font";
 def iconFontNames = config.iconFontNames ?: [ "*.ttf" ];
 
 gradle.projectsEvaluated {
