--- a/package.json
+++ b/package.json
@@ -108,5 +108,16 @@
     "react-native": "0.57.7",
     "react-native-linear-gradient": "react-native-community/react-native-linear-gradient#20928ce2ac8038e8545c7f6c3faab05f866deabd",
     "react-test-renderer": "16.6.1"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "babel-loader",
+      "react",
+      "react-dom",
+      "react-test-renderer",
+      "webpack",
+      "webpack-dev-server",
+      "wrapper-webpack-plugin"
+    ]
   }
 }
