--- a/package.json
+++ b/package.json
@@ -111,13 +111,11 @@
   },
   "greenkeeper": {
     "ignore": [
-      "babel-loader",
       "react",
       "react-dom",
       "react-test-renderer",
-      "webpack",
-      "webpack-dev-server",
-      "wrapper-webpack-plugin"
+      "react-native",
+      "react-native-linear-gradient"
     ]
   }
 }
