[BPK-2126] Implement Calendar component
Implement the Backpack Calendar component as `BpkCalendar` bridging the
native version. This commit introduces support for iOS only at this
time.

Co-Authored-By: Shaun Donnelly <shaun.donnelly@skyscanner.net>
Co-Authored-By: George Gillams <george.gillams@skyscanner.net>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - set -e
   - ./scripts/check-pristine-state package-lock.json ios/native.xcodeproj/project.pbxproj ios/native/Info.plist
   - npm run danger
-  - npm test
+  - TZ=Europe/London npm test
 
 cache:
   directories:
