--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,7 +123,7 @@ android {
         multiDexEnabled true
         testBuildType System.getProperty('testBuildType', 'debug')
         missingDimensionStrategy "minReactNative", "minReactNative46"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [googleMapsApiKey: getGMapsApiKey()]
     }
 
@@ -169,27 +169,28 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.androidx}"
     // From node_modules
     implementation 'com.facebook.react:react-native:+'
     // From node_modules
-    implementation 'net.skyscanner.backpack:Backpack:0.2.0'
-    implementation project(':react-native-maps')
+    implementation 'com.github.skyscanner:backpack-android:2.3.0'
+    // TODO: Normally this should use project(:react-native-maps) but it does not work with androidx
+    // version is 0.23. In any case this is what the app's code base is using, so it is a good idea
+    // we do the same
+    implementation 'com.airbnb.android:react-native-maps:0.17.1'
     implementation project(':react-native-linear-gradient')
-    implementation "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
-    implementation "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
-    implementation "com.android.support:design:${rootProject.ext.supportLibVersion}"
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation "androidx.legacy:legacy-support-v4:${rootProject.ext.androidx}"
+    implementation "androidx.recyclerview:recyclerview:${rootProject.ext.androidx}"
+    implementation "com.google.android.material:material:${rootProject.ext.androidx}"
+
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation "androidx.test:runner:1.1.0"
+    androidTestImplementation "androidx.test:rules:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
-
+""
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
