[BPK-2127] Bridge calendar component

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,12 +173,16 @@ dependencies {
     // From node_modules
     implementation 'com.facebook.react:react-native:+'
     // From node_modules
-    implementation 'com.github.skyscanner:backpack-android:2.3.0'
+    implementation("com.github.skyscanner:backpack-android:${rootProject.ext.backpackVersion}") {
+        exclude(group: "io.github.inflationx", module: "viewpump")
+    }
+
     // TODO: Normally this should use project(:react-native-maps) but it does not work with androidx
     // version is 0.23. In any case this is what the app's code base is using, so it is a good idea
     // we do the same
     implementation 'com.airbnb.android:react-native-maps:0.17.1'
     implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-calendar')
     implementation "androidx.legacy:legacy-support-v4:${rootProject.ext.androidx}"
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.androidx}"
     implementation "com.google.android.material:material:${rootProject.ext.androidx}"
