--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -35,6 +34,7 @@ allprojects {
 }
 
 ext {
+    backpackVersion     = "2.5.0"
     compileSdkVersion   = 28
     targetSdkVersion    = 28
     minSdkVersion       = 21
