--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+import groovy.json.JsonSlurper
 
 buildscript {
     ext.kotlin_version = '1.3.10'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,6 +31,7 @@ allprojects {
         buildscript {
             repositories {
                 google()
+                mavenCentral()
             }
         }
     }
@@ -42,4 +46,22 @@ ext {
     androidx            = '1.0.0'
     googlePlayServicesVersion = "15.0.1"
     androidMapsUtilsVersion = "0.5+"
+}
+
+def static getVersionFromJsPackage(project) {
+    def packageJson = getPackageJson(project)
+    def version = packageJson.version
+
+    def isSnapshot = System.getenv("SNAPSHOT") ?: false
+    if (isSnapshot) {
+        version = version + "-SNAPSHOT"
+    }
+
+    return version
+}
+
+def static getPackageJson(project) {
+    def packageJson = new File(project.projectDir, '../../package.json').getText('UTF-8')
+    def jsonSlurper = new JsonSlurper()
+    return jsonSlurper.parseText(packageJson)
 }
