--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,5 +10,5 @@ include ':react-native-linear-gradient'
 project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
 
 // react-native-maps
-include ':react-native-calendar'
-project(':react-native-calendar').projectDir = new File(rootProject.projectDir, '../packages/react-native-bpk-component-calendar/src/android')
+include ':react-native-bpk-component-calendar'
+project(':react-native-bpk-component-calendar').projectDir = new File(rootProject.projectDir, '../packages/react-native-bpk-component-calendar/src/android')
