[BPK-2212] New social like icon

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "rnpm": {
     "assets": [
-      "bpk-svgs/dist/font/"
+      "./packages/react-native-bpk-component-icon/node_modules/bpk-svgs/dist/font/"
     ]
   },
   "husky": {
@@ -85,7 +85,6 @@
     "@storybook/react-native": "^4.1.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-jest-hoist": "^23.2.0",
-    "bpk-svgs": "^6.1.0",
     "bpk-tokens": "^27.4.7",
     "colors": "^1.3.3",
     "danger": "^6.1.12",
