--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,6 @@
 [ignore]
 ; We fork some components by platform
-<PROJECT_ROOT>/node_modules/.*/*[.]android.js
+<PROJECT_ROOT>/node_modules/react-native/.*/*[.]android.js
 
 ; Ignore "BUCK" generated dirs
 <PROJECT_ROOT>/\.buckd/
