--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,5 @@
 [ignore]
-; We fork some components by platform
+; Ignore Android-specific modules from RN because they will confuse Flow when the same module is exported from two files.
 <PROJECT_ROOT>/node_modules/react-native/.*/*[.]android.js
 
 ; Ignore "BUCK" generated dirs
