[BPK-2257] Fix android flow errors (#64)
* [BPK-2257] Fix android flow errors

* [squash] Scope android ignores to `node_modules/react-native/.*`

* [squash] Fixed some types for FlatLists, SectionLists and DialingCodeLists

* [squash] Update snapsots

* [squash] Review comments

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,6 @@
 [ignore]
-; We fork some components by platform
-.*/*[.]android.js
+; Ignore Android-specific modules from RN because they will confuse Flow when the same module is exported from two files.
+<PROJECT_ROOT>/node_modules/react-native/.*/*[.]android.js
 
 ; Ignore "BUCK" generated dirs
 <PROJECT_ROOT>/\.buckd/
