[BPK-2257] Introduce android specific .flowconfig
Similar to the react native codeabse -> https://github.com/facebook/react-native/blob/master/.flowconfig.android

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "jest:update": "jest --updateSnapshot",
     "jest:watch": "jest --watch",
     "flow": "flow",
+    "flow-check-ios": "flow check",
+    "flow-check-android": "flow check --flowconfig-name .flowconfig.android",
     "check-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js",
     "fix-bpk-dependencies": "node scripts/npm/check-bpk-dependencies.js --fix",
-    "test": "npm run lint && npm run check-bpk-dependencies && jest --coverage && npm run flow",
+    "test": "npm run lint && npm run check-bpk-dependencies && jest --coverage && npm run flow-check-ios && npm run flow-check-android",
     "check-owners": "npm whoami && ( node scripts/npm/get-owners.js | grep -E $(npm whoami) ) && node scripts/npm/check-owners.js",
     "publish": "npm run check-owners && git pull --rebase && npm run flow stop && npm test && lerna publish",
     "release": "npm run publish",
