--- a/packages/react-native-bpk-component-flat-list/package.json
+++ b/packages/react-native-bpk-component-flat-list/package.json
@@ -19,6 +19,7 @@
     "react-native-bpk-component-icon": "^1.14.3",
     "react-native-bpk-component-text": "^4.1.1",
     "react-native-bpk-component-touchable-native-feedback": "^1.1.49",
-    "react-native-bpk-component-touchable-overlay": "^1.1.11"
+    "react-native-bpk-component-touchable-overlay": "^1.1.11",
+    "react-native-bpk-theming": "^1.1.0"
   }
 }
