--- a/packages/react-native-bpk-component-button/package.json
+++ b/packages/react-native-bpk-component-button/package.json
@@ -10,8 +10,8 @@
   "author": "Backpack Design System <backpack@skyscanner.net>",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "react": "^16.0.0-alpha.1",
-    "react-native": ">= 0.47.0",
+    "react": "^16.6.3",
+    "react-native": ">= 0.58.5",
     "react-native-linear-gradient": "react-native-community/react-native-linear-gradient"
   },
   "dependencies": {
