--- a/package.json
+++ b/package.json
@@ -115,8 +115,7 @@
       "react",
       "react-dom",
       "react-test-renderer",
-      "react-native",
-      "react-native-linear-gradient"
+      "react-native"
     ]
   }
 }
