--- a/packages/react-native-bpk-component-alert/package.json
+++ b/packages/react-native-bpk-component-alert/package.json
@@ -10,8 +10,8 @@
   "author": "Backpack Design System <backpack@skyscanner.net>",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "react": "^16.0.0-alpha.1",
-    "react-native": ">= 0.47.0"
+    "react": "^16.8.3",
+    "react-native": ">= 0.59.0"
   },
   "devDependencies": {
     "react-native-bpk-component-button": "^8.3.4"
