--- a/packages/react-native-bpk-component-boilerplate/package.json
+++ b/packages/react-native-bpk-component-boilerplate/package.json
@@ -11,8 +11,8 @@
   "author": "Backpack Design System <backpack@skyscanner.net>",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "react": "^16.0.0-alpha.1",
-    "react-native": ">= 0.47.0"
+    "react": "^16.8.3",
+    "react-native": ">= 0.59.0"
   },
   "dependencies": {
     "bpk-tokens": "^27.4.7",
